# profile.ivi.ico-uxf-homescreen

./: CIcoNotification.cc  CIcoNotification.h  CIcoNotificationApp.cc  CIcoNotificationApp.h  CIcoNotificationInterface.h  CIcoNotificationService.cc  CIcoNotificationService.h  Makefile  Makefile.am  app.cc  configure.ac  groups  install-appcore.sh  kill_homescreen  kill_homescreen_appcore  project.config  reload_appcore.sh  service.cc  start_homescreen  start_homescreen_appcore  test.cc  update-exec.sh
apps_controller/: Makefile.am  ico_syc_apc_control.c  ico_syc_apc_private.h  ico_syc_apc_regulation.c
apps_controller/test/: Makefile.am  apc_test.c  goapc_test.sh
ico-app-framework/test/: Makefile.am  gotest_client.sh  gotest_server.sh  test_client.c  test_server.c
lib/apps-framework/: Makefile.am  ico_syc_appresctl.c  ico_syc_common.c  ico_syc_inputctl.c  ico_syc_msg.c  ico_syc_userctl.c  ico_syc_winctl.c
lib/common/: CicoAilItems.cpp  CicoAilItems.h  CicoAulItems.cpp  CicoAulItems.h  CicoCommonDef.h  CicoConf.h  CicoEFLApp.cpp  CicoEFLApp.h  CicoGKeyFileConfig.cpp  CicoGKeyFileConfig.h  CicoLibString.cpp  CicoLibString.h  CicoResourceConfig.cpp  CicoResourceConfig.h  CicoSound.cpp  CicoSound.h  CicoSystemConfig.cpp  CicoSystemConfig.h  Cico_aul_listen_app.cpp  Cico_aul_listen_app.h  Makefile.am
lib/misc/state-machine/: CicoBlockParser.cpp  CicoBlockParser.h  CicoEvent.cpp  CicoEvent.h  CicoEventInfo.cpp  CicoEventInfo.h  CicoFinalState.cpp  CicoFinalState.h  CicoHistoryState.cpp  CicoHistoryState.h  CicoState.cpp  CicoState.h  CicoStateAction.cpp  CicoStateAction.h  CicoStateCore.cpp  CicoStateCore.h  CicoStateInternal.h  CicoStateMachine.cpp  CicoStateMachine.h  CicoStateMachineCreator.cpp  CicoStateMachineCreator.h  Makefile.am  ico_StateMachine_CWrapper.cpp  ico_StateMachine_CWrapper.h  picojson.h
lib/notification/: CicoNotification.cpp  CicoNotification.h  CicoNotificationApp.cpp  CicoNotificationApp.h  CicoNotificationInterface.h  CicoNotificationList.cpp  CicoNotificationList.h  CicoNotificationService.cpp  CicoNotificationService.h  Makefile.am
lib/system-controller/: CicoLog.h  CicoSCAilItems.cpp  CicoSCAilItems.h  CicoSCAppResourceController.cpp  CicoSCAppResourceController.h  CicoSCAulItems.cpp  CicoSCAulItems.h  CicoSCCommand.cpp  CicoSCCommand.h  CicoSCCommandParser.cpp  CicoSCCommandParser.h  CicoSCCommonDef.h  CicoSCConf.h  CicoSCDisplay.cpp  CicoSCDisplay.h  CicoSCDisplayZone.cpp  CicoSCDisplayZone.h  CicoSCInputController.cpp  CicoSCInputController.h  CicoSCInputDev.cpp  CicoSCInputDev.h  CicoSCLastInfo.h  CicoSCLayer.cpp  CicoSCLayer.h  CicoSCLifeCycleController.cpp  CicoSCLifeCycleController.h  CicoSCMessage.cpp  CicoSCMessage.h  CicoSCMessageRes.cpp  CicoSCMessageRes.h  CicoSCPolicyDef.h  CicoSCPolicyManager.cpp  CicoSCPolicyManager.h  CicoSCResourceManager.cpp  CicoSCResourceManager.h  CicoSCServer.cpp  CicoSCServer.h  CicoSCSwitch.cpp  CicoSCSwitch.h  CicoSCSysResourceController.cpp  (+28 more)
src/: Makefile.am  appli_list.edc  home_screen_bg.edc  home_screen_conf.c  home_screen_lib.c  home_screen_main.c  home_screen_parser.c  home_screen_sound.c  home_screen_touch.edc  on_screen.c  resource_conf.c  status_bar.c
src/homescreen/: CicoHSAppControl.cpp  CicoHSAppControl.h  CicoHSAppHistory.cpp  CicoHSAppHistory.h  CicoHSAppHistoryExt.cpp  CicoHSAppHistoryExt.h  CicoHSAppInfo.cpp  CicoHSAppInfo.h  CicoHSBackWindow.cpp  CicoHSBackWindow.h  CicoHSCmdOpts.cpp  CicoHSCmdOpts.h  CicoHSCommand.cpp  CicoHSCommand.h  CicoHSCommandArg.cpp  CicoHSCommandArg.h  CicoHSControlBarTouch.cpp  CicoHSControlBarTouch.h  CicoHSControlBarWindow.cpp  CicoHSControlBarWindow.h  CicoHSEFLApp.cpp  CicoHSEFLApp.h  CicoHSFlickInputWindow.cpp  CicoHSFlickInputWindow.h  CicoHSFlickTouch.cpp  CicoHSFlickTouch.h  CicoHSLifeCycleController.cpp  CicoHSLifeCycleController.h  CicoHSMenuTile.cpp  CicoHSMenuTile.h  CicoHSMenuTouch.cpp  CicoHSMenuTouch.h  CicoHSMenuWindow.cpp  CicoHSMenuWindow.h  CicoHSMessage.cpp  CicoHSMessage.h  CicoHSServer.cpp  CicoHSServer.h  CicoHSSwipeInputWindow.cpp  CicoHSSwipeInputWindow.h  (+52 more)
src/onscreen/: CicoOSClient.cpp  CicoOSClient.h  CicoOSEFLApp.cpp  CicoOSEFLApp.h  CicoOSPopWindow.cpp  CicoOSPopWindow.h  CicoOnScreen.cpp  CicoOnScreen.h  CicoOnScreenAction.cpp  CicoOnScreenAppList.cpp  CicoOnScreenContext.cpp  CicoOnScreenContext.h  CicoOnScreenControlWindow.h  Makefile.am  on_screen.cpp  on_screen.h  on_screen_main.cpp  onscreen.edc
src/statusbar/: CicoCommonComponent.cpp  CicoCommonComponent.h  CicoCommonModule.cpp  CicoCommonWindow.cpp  CicoCommonWindow.h  CicoComponentImplementation.cpp  CicoComponentImplementation.h  CicoComponentInterface.h  CicoModuleImplementation.cpp  CicoModuleImplementation.h  CicoModuleInterface.h  CicoSBConfigDef.h  CicoSBEFLApp.cpp  CicoSBEFLApp.h  CicoSBResourceDef.h  CicoStatusBar.cpp  CicoStatusBar.h  CicoStatusBarControlWindow.cpp  CicoStatusBarControlWindow.h  CicoStatusBarTime.cpp  CicoStatusBarTime.h  CicoWindowInterface.h  Makefile.am  main.cpp  status_bar.cpp  status_bar.h  statusbar.edc
src/syscond/: CicoEFLApp.cpp  CicoEFLApp.h  CicoSysConDaemon.cpp  CicoSysConDaemon.h  CicoSysConLogConfig.cpp  CicoSysConLogConfig.h  Makefile.am  main.cpp
tests/apps-framework/: Makefile.am  run_test.sh  tst_appresctl_main.c  tst_common.c  tst_server.c  tst_winctl.c
tests/apps-framework/data/: test.ico.res.app.desktop
tests/homescreen/: Makefile.am  homescreen-test-startall.sh  homescreen-test.sh  ico_send_hscommand.c
tests/homescreen/json/: exec-app1.json  geom-app1-1.json  geom-app1-2.json  geom-app1-3.json  hide-tile.json  show-app1.json  show-tile.json  term-app1.json
tests/statusbar/: Makefile.am  send_notification.cpp
tests/system-controller/test-dummy-hs/: CicoBackground.cpp  CicoBackground.h  CicoBaseWin.cpp  (+15 more)
tool/: Makefile.am  hs-launcher.c  ico_change_loginuser.c  ico_clear_screen.c  ico_clear_screen.h  kill_syscond  kill_syscond.sh  rm_autogen-file.sh  start_syscond  start_syscond.sh
tool/notification/: Makefile.am  del_notification.cpp  dump_notification.cpp  send_notification.cpp  send_notification2.cpp
(+121 files in other folders)
